tree-sitter-loongdoc_inline/test/corpus/pass_macro.txt
====================
pass_macro
====================

The text pass:q[<u>underline *me* </u>] is underlined.

The text pass:q,a[<u>underline _{docname}_ </u>] is underlined.

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (macro_passthrough
      (target)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (macro_passthrough
      (target)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element))
