tree-sitter-loongdoc_inline/test/corpus/passthrough.txt
====================
empty
====================

pass:[]

-------

(inline
  (inline_passthrough))

====================
passthrough
====================

+text+
`text`

$$text$$
$$text$$
pass:quotes[text]

-----

(inline
  (passthrough)
  (monospace)
  (passthrough)
  (passthrough)
  (inline_passthrough
    (target)
    (attr)))
