tree-sitter-loongdoc_inline/test/corpus/xref.txt
====================
xref
====================

<<id,reftext>>
xref:id[reftext]

<<aaa\,\>,bbb\>>>

<<aaa\,\>>>

-----

(inline
  (xref
    (id)
    (reftext))
  (inline_macro
    (target)
    (attr))
  (xref
    (id)
    (reftext))
  (xref
    (id)))
